# Onyx

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  setup_github.py
.github/workflows/: build.yml  publish.yml  release.yml  test.yml
installer/: onyx.iss
onyx/: __init__.py  main.py
onyx/commands/: __init__.py  backup.py  count.py  download.py  env.py  filehash.py  find.py  git.py  monitor.py  net.py  services.py  tree.py  unlock.py
static/: banner.psd
tests/: test_cli.py
