[project]
name = "onyx"
version = "0.5.0"
description = "Powerful collection of CLI utilities for developers and system administrators"
authors = [
    {name = "Noloquideus",email = "daniilmanukian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "click (>=8.3.1,<9.0.0)",
]

[project.scripts]
onyx = "onyx.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
